Add beautiful CSS gradient banners with content overlays

--- a/index.html
+++ b/index.html
@@ -80,27 +80,42 @@
         <!-- Hero Banner Slider -->
         <section class="hero-slider fade-in" id="home">
             <div class="slider-container">
-                <!-- Slide 1 - Cafe Interior with Chef Logo -->
+                <!-- Slide 1 - Welcome Banner -->
                 <div class="slide active">
-                    <div class="slide-bg"
-                        style="background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('banner1.jpg') center/cover no-repeat;">
-                        <!-- Content overlay removed to show full banner -->
+                    <div class="slide-bg banner-1">
+                        <div class="banner-overlay"></div>
+                        <div class="banner-content">
+                            <div class="banner-logo">🍰</div>
+                            <h1 class="banner-title">MAHA CAKES</h1>
+                            <p class="banner-tagline">Slice into happiness</p>
+                            <a href="#cakes" class="banner-btn ripple">VIEW MENU</a>
+                        </div>
                     </div>
                 </div>
 
-                <!-- Slide 2 - Bakery Display -->
+                <!-- Slide 2 - Fresh Baked -->
                 <div class="slide">
-                    <div class="slide-bg"
-                        style="background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('banner2.jpg') center/cover no-repeat;">
-                        <!-- Content overlay removed to show full banner -->
+                    <div class="slide-bg banner-2">
+                        <div class="banner-overlay"></div>
+                        <div class="banner-content">
+                            <div class="banner-emoji">🎂🧁🍞</div>
+                            <h1 class="banner-title">FRESH BAKED DAILY</h1>
+                            <p class="banner-tagline">Premium ingredients, crafted with love</p>
+                            <a href="#customize" class="banner-btn ripple">CUSTOMIZE CAKE</a>
+                        </div>
                     </div>
                 </div>
 
-                <!-- Slide 3 - Cakes Display with Chef Logo -->
+                <!-- Slide 3 - Special Offer -->
                 <div class="slide">
-                    <div class="slide-bg"
-                        style="background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('banner3.jpg') center/cover no-repeat;">
-                        <!-- Content overlay removed to show full banner -->
+                    <div class="slide-bg banner-3">
+                        <div class="banner-overlay"></div>
+                        <div class="banner-content">
+                            <div class="banner-badge">🎉 SPECIAL OFFER</div>
+                            <h1 class="banner-title">20% OFF</h1>
+                            <p class="banner-tagline">On your first order • Use code: FIRST20</p>
+                            <a href="#cakes" class="banner-btn ripple">ORDER NOW</a>
+                        </div>
                     </div>
                 </div>
             </div>
