--- a/index.html
+++ b/index.html
@@ -80,42 +80,21 @@
         <!-- Hero Banner Slider -->
         <section class="hero-slider fade-in" id="home">
             <div class="slider-container">
-                <!-- Slide 1 - Welcome Banner -->
+                <!-- Slide 1 - Cakes Display -->
                 <div class="slide active">
-                    <div class="slide-bg banner-1">
-                        <div class="banner-overlay"></div>
-                        <div class="banner-content">
-                            <div class="banner-logo">🍰</div>
-                            <h1 class="banner-title">MAHA CAKES</h1>
-                            <p class="banner-tagline">Slice into happiness</p>
-                            <a href="#cakes" class="banner-btn ripple">VIEW MENU</a>
-                        </div>
+                    <div class="slide-bg" style="background: url('banner1.jpg') center/cover no-repeat;">
                     </div>
                 </div>
 
-                <!-- Slide 2 - Fresh Baked -->
+                <!-- Slide 2 - Bakery Display -->
                 <div class="slide">
-                    <div class="slide-bg banner-2">
-                        <div class="banner-overlay"></div>
-                        <div class="banner-content">
-                            <div class="banner-emoji">🎂🧁🍞</div>
-                            <h1 class="banner-title">FRESH BAKED DAILY</h1>
-                            <p class="banner-tagline">Premium ingredients, crafted with love</p>
-                            <a href="#customize" class="banner-btn ripple">CUSTOMIZE CAKE</a>
-                        </div>
+                    <div class="slide-bg" style="background: url('banner2.jpg') center/cover no-repeat;">
                     </div>
                 </div>
 
-                <!-- Slide 3 - Special Offer -->
+                <!-- Slide 3 - Cafe Interior -->
                 <div class="slide">
-                    <div class="slide-bg banner-3">
-                        <div class="banner-overlay"></div>
-                        <div class="banner-content">
-                            <div class="banner-badge">🎉 SPECIAL OFFER</div>
-                            <h1 class="banner-title">20% OFF</h1>
-                            <p class="banner-tagline">On your first order • Use code: FIRST20</p>
-                            <a href="#cakes" class="banner-btn ripple">ORDER NOW</a>
-                        </div>
+                    <div class="slide-bg" style="background: url('banner3.jpg') center/cover no-repeat;">
                     </div>
                 </div>
             </div>
