Fix logo display and add logo.png file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container nav-container">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="logo.png" alt="Maha Cakes" class="logo-img">
+                        <span class="logo-text">🍰 Maha Cakes</span>
                     </a>
                 </div>
                 <ul class="nav-links" id="navLinks">
