Fix banner slider: use img tags instead of background images

--- a/index.html
+++ b/index.html
@@ -78,20 +78,17 @@
         <div class="slider-container">
             <!-- Slide 1 - Cakes Display -->
             <div class="slide active">
-                <div class="slide-bg" style="background: url('banner1.jpg') center/cover no-repeat;">
-                </div>
+                <img src="banner1.jpg" alt="Maha Cakes Banner 1" class="slide-img">
             </div>
 
             <!-- Slide 2 - Bakery Display -->
             <div class="slide">
-                <div class="slide-bg" style="background: url('banner2.jpg') center/cover no-repeat;">
-                </div>
+                <img src="banner2.jpg" alt="Maha Cakes Banner 2" class="slide-img">
             </div>
 
             <!-- Slide 3 - Cafe Interior -->
             <div class="slide">
-                <div class="slide-bg" style="background: url('banner3.jpg') center/cover no-repeat;">
-                </div>
+                <img src="banner3.jpg" alt="Maha Cakes Banner 3" class="slide-img">
             </div>
         </div>
 
