--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </nav>
 
     <!-- Hero Banner Slider -->
-    <section class="hero-slider fade-in" id="home">
+    <section class="hero-slider" id="home">
         <div class="slider-container">
             <!-- Slide 1 - Cakes Display -->
             <div class="slide active">
