Add animated floating cakes section under banner

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="banners.css">
     <link rel="stylesheet" href="effects.css">
     <link rel="stylesheet" href="slider.css">
+    <link rel="stylesheet" href="cake-animation.css">
 </head>
 
 <body>
