Add floating cake animation HTML under banner

--- a/index.html
+++ b/index.html
@@ -105,6 +105,18 @@
         <button class="slider-arrow next" onclick="changeSlide(1)" aria-label="Next slide">›</button>
     </section>
 
+    <!-- Animated Cake Decoration -->
+    <div class="cake-animation-section">
+        <div class="floating-cakes">
+            <span class="cake-emoji" style="--delay: 0s; --x: 10%;">🍰</span>
+            <span class="cake-emoji" style="--delay: 0.5s; --x: 25%;">🎂</span>
+            <span class="cake-emoji" style="--delay: 1s; --x: 40%;">🧁</span>
+            <span class="cake-emoji" style="--delay: 1.5s; --x: 55%;">🍩</span>
+            <span class="cake-emoji" style="--delay: 2s; --x: 70%;">🎂</span>
+            <span class="cake-emoji" style="--delay: 2.5s; --x: 85%;">🍰</span>
+        </div>
+    </div>
+
     <!-- Promotional Banner -->
     <section class="promo-banner slide-in-left">
         <div class="container">
