Add products.js database with 30 FNP-style cakes and update script.js to use it

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="effects.css">
     <link rel="stylesheet" href="slider.css">
     <link rel="stylesheet" href="cake-animation.css">
+    <script src="products.js"></script>
 </head>
 
 <body>
