Integrate login/signup section with blur background and Our Works gallery into index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="effects.css">
     <link rel="stylesheet" href="slider.css">
     <link rel="stylesheet" href="cake-animation.css">
+    <link rel="stylesheet" href="auth.css">
     <script src="products.js"></script>
 </head>
 
@@ -117,6 +118,101 @@
             <span class="cake-emoji" style="--delay: 2.5s; --x: 85%;">🍰</span>
         </div>
     </div>
+
+    <!-- Login/Signup Section with Blur Background -->
+    <section class="auth-section">
+        <div class="auth-blur-bg"></div>
+        <div class="container auth-container">
+            <div class="auth-card">
+                <div class="auth-tabs">
+                    <button class="auth-tab active" onclick="switchAuthTab('login')">Login</button>
+                    <button class="auth-tab" onclick="switchAuthTab('signup')">Sign Up</button>
+                </div>
+
+                <!-- Login Form -->
+                <form id="loginForm" class="auth-form active">
+                    <h2>Welcome Back! 🎂</h2>
+                    <p class="auth-subtitle">Login to order your favorite cakes</p>
+
+                    <div class="form-group">
+                        <label for="loginEmail">Email</label>
+                        <input type="email" id="loginEmail" placeholder="your@email.com" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="loginPassword">Password</label>
+                        <input type="password" id="loginPassword" placeholder="••••••••" required>
+                    </div>
+
+                    <button type="submit" class="auth-btn">Login</button>
+                    <p class="auth-link">Forgot password? <a href="#">Reset here</a></p>
+                </form>
+
+                <!-- Signup Form -->
+                <form id="signupForm" class="auth-form">
+                    <h2>Join Maha Cakes! 🍰</h2>
+                    <p class="auth-subtitle">Create an account to get started</p>
+
+                    <div class="form-group">
+                        <label for="signupName">Full Name</label>
+                        <input type="text" id="signupName" placeholder="John Doe" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="signupEmail">Email</label>
+                        <input type="email" id="signupEmail" placeholder="your@email.com" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="signupPassword">Password</label>
+                        <input type="password" id="signupPassword" placeholder="••••••••" required>
+                    </div>
+
+                    <button type="submit" class="auth-btn">Sign Up</button>
+                    <p class="auth-link">Already have an account? <a href="#"
+                            onclick="switchAuthTab('login'); return false;">Login</a></p>
+                </form>
+            </div>
+
+            <!-- Our Works Section -->
+            <div class="our-works">
+                <h2 class="section-title">Our Works 📸</h2>
+                <div class="works-grid">
+                    <div class="work-item">
+                        <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=400"
+                            alt="Wedding Cake">
+                        <div class="work-overlay">
+                            <h3>Wedding Cake</h3>
+                            <p>3-Tier Elegance</p>
+                        </div>
+                    </div>
+                    <div class="work-item">
+                        <img src="https://images.unsplash.com/photo-1562440499-64c9a74f0f77?w=400" alt="Birthday Cake">
+                        <div class="work-overlay">
+                            <h3>Birthday Special</h3>
+                            <p>Chocolate Delight</p>
+                        </div>
+                    </div>
+                    <div class="work-item">
+                        <img src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?w=400"
+                            alt="Anniversary Cake">
+                        <div class="work-overlay">
+                            <h3>Anniversary Cake</h3>
+                            <p>Red Velvet Love</p>
+                        </div>
+                    </div>
+                    <div class="work-item">
+                        <img src="https://images.unsplash.com/photo-1535141192574-5d4897c12636?w=400"
+                            alt="Designer Cake">
+                        <div class="work-overlay">
+                            <h3>Designer Cake</h3>
+                            <p>Fondant Art</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Promotional Banner -->
     <section class="promo-banner slide-in-left">
