Make auth section more transparent and add auth.js functionality

--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
     <script src="customizer.js"></script>
     <script src="effects.js"></script>
     <script src="slider.js"></script>
+    <script src="auth.js"></script>
 </body>
 
 </html>
