Separate login page, move Our Works section, improve layout

--- a/index.html
+++ b/index.html
@@ -358,6 +358,59 @@
         </div>
     </section>
 
+    <!-- Our Works Section -->
+    <section class="our-works-section" id="works">
+        <div class="container">
+            <h2 class="section-title">Our Works 📸</h2>
+            <p style="text-align: center; color: #666; margin-bottom: 3rem;">Showcasing our finest cake creations</p>
+            <div class="works-grid">
+                <div class="work-item">
+                    <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=400" alt="Wedding Cake">
+                    <div class="work-overlay">
+                        <h3>Wedding Cake</h3>
+                        <p>3-Tier Elegance</p>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <img src="https://images.unsplash.com/photo-1562440499-64c9a74f0f77?w=400" alt="Birthday Cake">
+                    <div class="work-overlay">
+                        <h3>Birthday Special</h3>
+                        <p>Chocolate Delight</p>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <img src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?w=400"
+                        alt="Anniversary Cake">
+                    <div class="work-overlay">
+                        <h3>Anniversary Cake</h3>
+                        <p>Red Velvet Love</p>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <img src="https://images.unsplash.com/photo-1535141192574-5d4897c12636?w=400" alt="Designer Cake">
+                    <div class="work-overlay">
+                        <h3>Designer Cake</h3>
+                        <p>Fondant Art</p>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <img src="https://images.unsplash.com/photo-1558636508-e0db3814bd1d?w=400" alt="Cupcakes">
+                    <div class="work-overlay">
+                        <h3>Cupcake Tower</h3>
+                        <p>Sweet Perfection</p>
+                    </div>
+                </div>
+                <div class="work-item">
+                    <img src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?w=400" alt="Custom Cake">
+                    <div class="work-overlay">
+                        <h3>Custom Design</h3>
+                        <p>Your Dream Cake</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer" id="contact">
         <div class="container">
